# aoc

./: README.md  pyproject.toml  setup.py
2023/day01/solver/: part_1.py  part_2.py
2023/day01/tests/: test_solve.py
2023/day02/solver/: part_1.py  part_2.py
2023/day02/tests/: test_solve.py
2023/day03/solver/: part_1.py  part_2.py
2023/day03/tests/: test_solve.py
2023/day04/solver/: part_1.py  part_2.py
2023/day05/solver/: part_1.py  part_2.py  part_2_convolurted.py  utils.py
2023/day06/solver/: part_1.py  part_2.py
2023/day07/solver/: part_1.py  part_2.py
2023/day08/: run.sh
2023/day08/solver/: part_1.py  part_2.py
2023/day08/tests/: test_solve.py
2023/day09/solver/: part_1.py  part_2.py
2023/day10/solver/: part_1.py  part_2.py
2023/day10/tests/: test_solve.py
2023/day11/solver/: part_1.py  part_2.py
2023/day11/tests/: test_solve.py
2023/day12/solver/: part_1.py  part_1_original_solve.py  part_2.py
2023/day12/tests/: test_solve.py
2023/day13/solver/: part_1.py
2023/day13/tests/: test_solve.py
2023/day14/solver/: part_1.py  part_2.py
2023/day14/tests/: test_solve.py
2023/day15/solver/: part_1.py  part_2.py
2023/day15/tests/: test_solve.py
2023/day16/solver/: part_1.py  part_2.py  utils.py
2023/day16/task_input/: test_2.txt
2023/day16/tests/: test_solve.py
2023/day17/solver/: part_1.py  part_2.py
2024/day01/: pyproject.toml  run.sh
2024/day02/: pyproject.toml
2024/day08/: pyproject.toml
2024/day12/: pyproject.toml
2024/day13/: pyproject.toml
2024/day20/: pyproject.toml
template/: pyproject.toml  run.sh
(+89 files in other folders)
