[tool.poetry]
name = "aoc-template-generator"
version = "0.1.0"
description = ""
authors = ["Morten Hauge <morten.hauge97@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
numpy = "^1.26.2"
matplotlib = "^3.8.2"
shapely = "^2.0.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-watch = "^4.2.0"
pydantic-settings = "^2.1.0"


[[tool.poetry.source]]
name = "fpho"
url = "https://files.pythonhosted.org"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
