[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest-watch>=4.2.0",
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "typer>=0.14.0",
    "ruff>=0.8.2",
]

[tool.uv.workspace]
members = ["template"]
